# mc-arc

./: README.md  main.py  pyproject.toml
examples/: android_facility.py  androids_en.py  androids_facility.py  androids_fr.py  shared.py
examples/androids/: .gitignore  load.py  lore.json  prompts.py  run.py
mc_arc/: __init__.py  interfaces.py  mc.py  participant.py  prompts.py  response.py
mc_arc/adapters/: __init__.py  genai.py  pydantic_ai.py
mc_arc/reporters/: __init__.py  anthropic.py  base.py  bullet_point.py  gemini.py  openai.py
mc_arc/selectors/: anthropic.py  base.py  gemini.py  openai.py
mca/: interfaces.py  mc.py  participant.py  prompts.py  response.py
mca/adapters/: genai.py  pydantic_ai.py
mca/examples/: android_facility.py  androids_en.py  androids_fr.py  shared.py
mca/reporters/: anthropic.py  base.py  bullet_point.py  gemini.py
mca/selectors/: __init__.py  anthropic.py  base.py  gemini.py  random.py
mca/summarizers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
